kubernetes/image-rotate.service.yml
apiVersion: v1
kind: Service
metadata:
  name: image-rotate-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9393
      targetPort: 80
      protocol: TCP
  selector:
    app: image-rotate
